--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>Habilidades</title>
+    <!--icon-->
+    <link rel="icon" type="image/x-icon" href="/components/img/favicon.ico">
 </head>
 
 <body>
