--- a/pages/home.html
+++ b/pages/home.html
@@ -2,6 +2,8 @@
 <html lang="pt-br">
     <head>
         <title>Meu portifolio</title>
+        <!--icon-->
+    <link rel="icon" type="image/x-icon" href="/components/img/favicon.ico">
     </head>
     <body>
         <div class="container-fluid">
@@ -15,8 +17,16 @@
                         Desenvolvedora Front-End
                     </h1>
 
-                    <button class="btn" id="CV">Download Curriculum Vitae</button>
-                    <button class="btn" id="CL">View Currículo Lattes</button>
+                    <button class="btn" id="CV">
+                        <a href="/components/pdf/Currículo.docx" download="Curriculo_Janaina_da_Silva">
+                            Download Curriculum Vitae
+                        </a>
+                    </button>
+                    <button class="btn" id="CL">
+                        <a href="http://lattes.cnpq.br/7774818605673485" target="_blank">
+                            View Currículo Lattes
+                        </a>
+                    </button>
                 </div>
             </div>            
         </div>
