--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -2,30 +2,37 @@
 <html lang="pt-br">
 
 <head>
-    <script type="text/javascript" src="/components/scripts/ampulheta.js"></script>
+    <script type="text/javascript" src="/components/scripts/ampulheta_a.js"></script>
+    <script type="text/javascript" src="/components/scripts/ampulheta_b.js"></script>
+    <script type="text/javascript" src="/components/scripts/ampulheta_c.js"></script>
+    <script type="text/javascript" src="/components/scripts/ampulheta_d.js"></script>
+    <script type="text/javascript" src="/components/scripts/ampulheta_e.js"></script>
+    <script type="text/javascript" src="/components/scripts/ampulheta_f.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Projetos</title>
+    <!--icon-->
+    <link rel="icon" type="image/x-icon" href="/components/img/favicon.ico">
 </head>
 
 <body>
     <div class="container-fluid">
         <div id="rowP" class="row align-items-center">
             <div class="col-sm-12 col-md-12 col-lg-12 text-center">
-                <h1>projetos</h1>
+                <h1>Projetos</h1>
                 <div class="row">
-                    <div class="col-sm-12 col-md-4 col-lg-4">
+                    <div class="col-sm-12 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
                         <div class="card">
                             <h4 class="card-title">Em breve</h4>
                             <div id="div1" class="fa"></div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-4 col-lg-4">
+                    <div class="col-sm-12 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
                         <div class="card">
                             <h4 class="card-title">Em breve</h4>
                             <div id="div2" class="fa"></div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-4 col-lg-4">
+                    <div class="col-sm-12 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
                         <div class="card">
                             <h4 class="card-title">Em breve</h4>
                             <div id="div3" class="fa"></div>
@@ -33,19 +40,19 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-12 col-md-4 col-lg-4">
+                    <div class="col-sm-12 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
                         <div class="card">
                             <h4 class="card-title">Em breve</h4>
                             <div id="div4" class="fa"></div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-4 col-lg-4">
+                    <div class="col-sm-12 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
                         <div class="card">
                             <h4 class="card-title">Em breve</h4>
                             <div id="div5" class="fa"></div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-4 col-lg-4">
+                    <div class="col-sm-12 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
                         <div class="card">
                             <h4 class="card-title">Em breve</h4>
                             <div id="div6" class="fa"></div>
