--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -4,6 +4,8 @@
 <head>
     <script type="text/javascript" src="/components/scripts/idade.js"></script>
     <title>Sobre mim</title>
+    <!--icon-->
+    <link rel="icon" type="image/x-icon" href="/components/img/favicon.ico">
 </head>
 
 <body>
@@ -18,7 +20,7 @@
                 <h1 class="text-center">Sobre mim</h1>
 
                 <p>Meu nome é Janaina, tenho <span id="idade"></span> anos, gaúcha de Rio Grande - RS. Sou
-                    desenvolvedora front-end, bacharela em Sistemas de informação (2019) <i
+                    desenvolvedora front-end, Bacharela em Sistemas de informação (2019) <i
                         class="iconSobre bi bi-mortarboard"></i> e Mestra em engenharia de computação (2022) <i
                         class="iconSobre bi bi-mortarboard-fill"></i>.</p>
 
