--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -13,83 +13,83 @@
             <div class="col-sm-12 col-md-12 col-lg-12">
                 <h1>Habilidades</h1>
                 <div class="row">
-                    <div class="col-sm-2 col-md-2 col-lg-2"></div>
-                    <div class="col-sm-2 col-md-2 col-lg-2">
+                    <div class="col-1 col-sm-2 col-md-2 col-lg-2"></div>
+                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
                         <button id="html5" type="button" class="btn">
                             <div id="iconHtml5"></div>
                         </button>
                     </div>
-                    <div class="col-sm-2 col-md-2 col-lg-2">
+                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
                         <button id="css3" type="button" class="btn  btn-lg">
                             <div id="iconCss3"></div>
                         </button>
                     </div>
-                    <div class="col-sm-2 col-md-2 col-lg-2">
+                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
 
                         <button id="javascript" type="button" class="btn  btn-lg">
                             <div id="iconJavascript"></div>
                         </button>
                     </div>
-                    <div class="col-sm-2 col-md-2 col-lg-2">
+                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
 
                         <button id="jquery" type="button" class="btn  btn-lg">
                             <div id="iconJquery"></div>
                         </button>
                     </div>
-                    <div class="col-sm-2 col-md-2 col-lg-2"></div>
+                    <div class="col-1 col-sm-2 col-md-2 col-lg-2"></div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-1 col-md-1 col-lg-1"></div>
-                    <div class="col-sm-2 col-md-2 col-lg-2">
+                    <div class="col-0 col-sm-1 col-md-1 col-lg-1"></div>
+                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
                         <button id="bootstrap" type="button" class="btn  btn-lg">
                             <div id="iconBootstrap"></div>
                         </button>
                     </div>
-                    <div class="col-sm-2 col-md-2 col-lg-2">
+                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
                         <button id="react" type="button" class="btn  btn-lg">
                             <div id="iconReact"></div>
                         </button>
                     </div>
-                    <div class="col-sm-2 col-md-2 col-lg-2">
+                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
                         <button id="vue" type="button" class="btn  btn-lg">
                             <div id="iconVue"></div>
                         </button>
                     </div>
-                    <div class="col-sm-2 col-md-2 col-lg-2">
+                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
                         <button id="postgresql" type="button" class="btn  btn-lg">
                             <div id="iconPostgresql"></div>
                         </button>
                     </div>
-                    <div class="col-sm-2 col-md-2 col-lg-2">
+                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
                         <button id="php" type="button" class="btn  btn-lg">
                             <div id="iconPhp"></div>
                         </button>
                     </div>
-                    <div class="col-sm-1 col-md-1 col-lg-1"></div>
+                    <div class="col-0 col-sm-1 col-md-1 col-lg-1"></div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-2 col-md-2 col-lg-2"></div>
-                    <div class="col-sm-2 col-md-2 col-lg-2">
+                    <div class="col-1 col-sm-2 col-md-2 col-lg-2"></div>
+                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
                         <button id="joomla" type="button" class="btn  btn-lg">
                             <div id="iconJoomla"></div>
                         </button>
                     </div>
-                    <div class="col-sm-2 col-md-2 col-lg-2">
+                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
                         <button id="wordpress" type="button" class="btn  btn-lg">
                             <div id="iconWordpress"></div>
                         </button>
                     </div>
-                    <div class="col-sm-2 col-md-2 col-lg-2">
+                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
                         <button id="git" type="button" class="btn  btn-lg">
                             <div id="iconGit"></div>
                         </button>
                     </div>
-                    <div class="col-sm-2 col-md-2 col-lg-2">
+                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
                         <button id="github" type="button" class="btn  btn-lg">
                             <div id="iconGithub"></div>
                         </button>
                     </div>
-                    <div class="col-sm-2 col-md-2 col-lg-2"></div>
+                    <div class="col-1 col-sm-2 col-md-2 col-lg-2"></div>
                 </div>
             </div>
         </div>
