--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -8,7 +8,6 @@
     <script type="text/javascript" src="/components/scripts/ampulheta_d.js"></script>
     <script type="text/javascript" src="/components/scripts/ampulheta_e.js"></script>
     <script type="text/javascript" src="/components/scripts/ampulheta_f.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Projetos</title>
     <!--icon-->
     <link rel="icon" type="image/x-icon" href="/components/img/favicon.ico">
@@ -17,42 +16,40 @@
 <body>
     <div class="container-fluid">
         <div id="rowP" class="row align-items-center">
-            <div class="col-sm-12 col-md-12 col-lg-12 text-center">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
                 <h1>Projetos</h1>
                 <div class="row">
-                    <div class="col-sm-12 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
                         <div class="card">
                             <h4 class="card-title">Em breve</h4>
                             <div id="div1" class="fa"></div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
                         <div class="card">
                             <h4 class="card-title">Em breve</h4>
                             <div id="div2" class="fa"></div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
                         <div class="card">
                             <h4 class="card-title">Em breve</h4>
                             <div id="div3" class="fa"></div>
                         </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
                         <div class="card">
                             <h4 class="card-title">Em breve</h4>
                             <div id="div4" class="fa"></div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
                         <div class="card">
                             <h4 class="card-title">Em breve</h4>
                             <div id="div5" class="fa"></div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
                         <div class="card">
                             <h4 class="card-title">Em breve</h4>
                             <div id="div6" class="fa"></div>
