--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <!-- icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <script src="https://kit.fontawesome.com/34fd4b8681.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- styles -->
     <link rel="stylesheet" type="text/css" href="/components/styles/indexStyles.css" media="screen" />
@@ -35,32 +36,33 @@
     <link rel="stylesheet" type="text/css" href="/components/styles/habilidadesStyles.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="/components/styles/projetosStyles.css" media="screen" />
 
+    <link rel="shortcut icon" href="#">
 </head>
 
 <body>
     <header id="menu">
         <nav>
         <img id="imgMenu" src="/components/img/img_menu.png" alt="img_menu" />
-        <ul>
-            <li>
+        <ul class="nav justify-content-end">
+            <li class="nav-item">
                 <a class="ativado" href="pages/home.html" id="tooltipHome" title="Home">
                     <span class="icon"><i class="bi bi-house-heart"></i></span>
                     <span class="text">Home</span>
                 </a>
             </li>
-            <li>
+            <li class="nav-item">
                 <a href="pages/sobre.html" id="tooltipSobre" title="Sobre mim">
                     <span class="icon"><i class="bi bi-person-circle"></i></span>
                     <span class="text">Sobre</span>
                 </a>
             </li>
-            <li>
+            <li class="nav-item">
                 <a href="pages/habilidades.html" id="tooltipHabilidades" title="Habilidades">
                     <span class="icon"><i class="bi bi-person-lines-fill"></i></span>
                     <span class="text">Habilidades</span>
                 </a>
             </li>
-            <li>
+            <li class="nav-item">
                 <a href="pages/projetos.html" id="tooltipHProjetos" title="Projetos">
                     <span class="icon"><i class="bi bi-person-gear"></i></span>
                     <span class="text">Projetos</span>
