--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -48,10 +48,10 @@
                 <p>Amo meus
                     <i class="iconSobre fa-solid fa-cat"></i> pets
                     <i class="iconSobre fa-solid fa-dog"></i>,
-                    musica <i class="iconSobre bi bi-music-note-beamed"></i>,
+                    música <i class="iconSobre bi bi-music-note-beamed"></i>,
                     animes <i class="iconSobre fa-solid fa-hat-wizard"></i>,
                     games <i class="iconSobre fa-solid fa-gamepad"></i>,
-                    series <i class="iconSobre fa-solid fa-clapperboard"></i>
+                    séries <i class="iconSobre fa-solid fa-clapperboard"></i>
                     e
                     filmes <i class="iconSobre bi bi-film"></i>.
                 </p>
