v. 12 ajuste de caminho img

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
     <header id="menu">
         <nav>
-        <img id="imgMenu" src="/components/img/img_menu.png" alt="img_menu" />
+        <img id="imgMenu" src="components/img/img_menu.png" alt="img_menu" />
         <ul class="nav justify-content-end">
             <li class="nav-item">
                 <a class="ativado" href="pages/home.html" id="tooltipHome" title="Home">
