--- a/pages/home.html
+++ b/pages/home.html
@@ -3,13 +3,13 @@
     <head>
         <title>Meu portifolio</title>
         <!--icon-->
-    <link rel="icon" type="image/x-icon" href="/components/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="components/img/favicon.ico">
     </head>
     <body>
         <div class="container-fluid">
             <div id="rowP" class="row align-items-center">
                 <div class="col-sm-12 col-md-6 col-lg-6">
-                    <img class="mx-auto d-block" id="imgHome" src="/components/img/img_home.png" alt="img_home"/>
+                    <img class="mx-auto d-block" id="imgHome" src="components/img/img_home.png" alt="img_home"/>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 text-center">
                     <h1 id="textHome">Eu sou Janaina da Silva
