v. 13 ajustes caminho css e img

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -2,17 +2,17 @@
 <html lang="pt-br">
 
 <head>
-    <script type="text/javascript" src="/components/scripts/idade.js"></script>
+    <script type="text/javascript" src="components/scripts/idade.js"></script>
     <title>Sobre mim</title>
     <!--icon-->
-    <link rel="icon" type="image/x-icon" href="/components/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="components/img/favicon.ico">
 </head>
 
 <body>
     <div class="container-fluid">
         <div id="rowP" class="row align-items-center">
             <div class="col-sm-12 col-md-5 col-lg-4">
-                <img class="rounded-circle mx-auto d-block" id="imgSobre" src="/components/img/img_minha.jpg"
+                <img class="rounded-circle mx-auto d-block" id="imgSobre" src="components/img/img_minha.jpg"
                     alt="foto" />
             </div>
             <div class="col-sm-12 col-md-5 col-lg-8 text-justify">
@@ -31,14 +31,14 @@
                     HTML5 <i class="iconSobre fa-brands fa-html5"></i>,
                     CSS3 <i class="iconSobre fa-brands fa-css3-alt"></i>,
                     JavaScript <i class="iconSobre fa-brands fa-square-js"></i>,
-                    Jquery <img class="iconSobre" src="/components/icones/icons8-jquery-verde.png" alt="icon_jquery"> e
+                    Jquery <img class="iconSobre" src="components/icones/icons8-jquery-verde.png" alt="icon_jquery"> e
                     Bootstrap <i class="iconSobre bi bi-bootstrap-fill"></i>.
                 </p>
 
                 <p>Outras tecnologias e frameworks que tenho contato são:
                     React <i class="iconSobre fa-brands fa-react"></i>,
                     Vue <i class="iconSobre fa-brands fa-vuejs"></i>,
-                    Postgresql <img class="iconSobre" src="/components/icones/icons8-postgresql-verde.png"
+                    Postgresql <img class="iconSobre" src="components/icones/icons8-postgresql-verde.png"
                         alt="icon_postgeesql">,
                     PHP 8 <i class="iconSobre fa-brands fa-php"></i>,
                     Joomla <i class="iconSobre fa-brands fa-joomla"></i>,
