--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -4,7 +4,7 @@
 <head>
     <title>Habilidades</title>
     <!--icon-->
-    <link rel="icon" type="image/x-icon" href="/components/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="components/img/favicon.ico">
     <script type="text/javascript" src="/components/scripts/tooltipHabilidades.js"></script>
 </head>
 
