v. 16 ajuste caminho js

--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -2,12 +2,12 @@
 <html lang="pt-br">
 
 <head>
-    <script type="text/javascript" src="../components/scripts/ampulheta_a.js"></script>
-    <script type="text/javascript" src="../components/scripts/ampulheta_b.js"></script>
-    <script type="text/javascript" src="../components/scripts/ampulheta_c.js"></script>
-    <script type="text/javascript" src="../components/scripts/ampulheta_d.js"></script>
-    <script type="text/javascript" src="../components/scripts/ampulheta_e.js"></script>
-    <script type="text/javascript" src="../components/scripts/ampulheta_f.js"></script>
+    <script type="text/javascript" src="components/scripts/ampulheta_a.js"></script>
+    <script type="text/javascript" src="components/scripts/ampulheta_b.js"></script>
+    <script type="text/javascript" src="components/scripts/ampulheta_c.js"></script>
+    <script type="text/javascript" src="components/scripts/ampulheta_d.js"></script>
+    <script type="text/javascript" src="components/scripts/ampulheta_e.js"></script>
+    <script type="text/javascript" src="components/scripts/ampulheta_f.js"></script>
     <title>Projetos</title>
     <!--icon-->
     <link rel="icon" type="image/x-icon" href="components/img/favicon.ico">
