v. 16 ajuste caminho favicon

--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="components/scripts/ampulheta_f.js"></script>
     <title>Projetos</title>
     <!--icon-->
-    <link rel="icon" type="image/x-icon" href="components/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../components/img/favicon.ico">
 </head>
 
 <body>
