--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -5,7 +5,8 @@
     <script type="text/javascript" src="components/scripts/idade.js"></script>
     <title>Sobre mim</title>
     <!--icon-->
-    <link rel="icon" type="image/x-icon" href="components/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" 
+    href="../components/img/favicon.ico">
 </head>
 
 <body>
