--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -3,9 +3,11 @@
 
 <head>
     <title>Habilidades</title>
-    <!--icon-->
-    <link rel="icon" type="image/x-icon" href="components/img/favicon.ico">
+
     <script type="text/javascript" src="components/scripts/tooltipHabilidades.js"></script>
+
+    <!--icon-->
+    <link rel="icon" type="image/x-icon" href="../components/img/favicon.ico">
 </head>
 
 <body>
