v. 16 ajuste caminho favicon

--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="components/scripts/tooltipHabilidades.js"></script>
 
     <!--icon-->
-    <link rel="icon" type="image/x-icon" href="../components/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="components/img/favicon.ico">
 </head>
 
 <body>
