--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -6,7 +6,7 @@
     <title>Sobre mim</title>
     <!--icon-->
     <link rel="icon" type="image/x-icon" 
-    href="../components/img/favicon.ico">
+    href="components/img/favicon.ico">
 </head>
 
 <body>
