--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="pt-br">
 
 <head>
+
+    <!--icon-->
+    <link rel="icon" type="image/x-icon" 
+    href="components/img/favicon.ico">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap -->
