--- a/pages/home.html
+++ b/pages/home.html
@@ -3,7 +3,7 @@
     <head>
         <title>Meu portifolio</title>
         <!--icon-->
-    <link rel="icon" type="image/x-icon" href="../components/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="components/img/favicon.ico">
     </head>
     <body>
         <div class="container-fluid">
