atualizaçoes no conteudo de sobre, habilidade e projetos

--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -48,6 +48,13 @@
                             <div id="iconBootstrap"></div>
                         </button>
                     </div>
+                    
+                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
+                        <button id="python" type="button" class="btn  btn-lg" id="tooltipPython" title="Python">
+                            <div id="iconPython"></div>
+                        </button>
+                    </div>
+
                     <div class="col-2 col-sm-2 col-md-2 col-lg-2">
                         <button id="react" type="button" class="btn  btn-lg" id="tooltipReact" title="React">
                             <div id="iconReact"></div>
@@ -59,6 +66,15 @@
                         </button>
                     </div>
                     <div class="col-2 col-sm-2 col-md-2 col-lg-2">
+                        <button id="flask" type="button" class="btn  btn-lg" id="tooltipFlask" title="Flask">
+                            <div id="iconFlask"></div>
+                        </button>
+                    </div>
+                    <div class="col-0 col-sm-1 col-md-1 col-lg-1"></div>
+                </div>
+                <div class="row">
+                    <div class="col-1 col-sm-2 col-md-2 col-lg-2"></div>
+                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
                         <button id="postgresql" type="button" class="btn  btn-lg" id="tooltipPostgresql" title="Postgresql">
                             <div id="iconPostgresql"></div>
                         </button>
@@ -68,10 +84,7 @@
                             <div id="iconPhp"></div>
                         </button>
                     </div>
-                    <div class="col-0 col-sm-1 col-md-1 col-lg-1"></div>
-                </div>
-                <div class="row">
-                    <div class="col-1 col-sm-2 col-md-2 col-lg-2"></div>
+
                     <div class="col-2 col-sm-2 col-md-2 col-lg-2">
                         <button id="joomla" type="button" class="btn  btn-lg" id="tooltipJoomla" title="Joomla">
                             <div id="iconJoomla"></div>
@@ -82,17 +95,23 @@
                             <div id="iconWordpress"></div>
                         </button>
                     </div>
+                    <div class="col-1 col-sm-2 col-md-2 col-lg-2"></div>
+                </div>
+                <div class="row">
+                    <div class="col-0 col-sm-1 col-md-1 col-lg-1"></div>
                     <div class="col-2 col-sm-2 col-md-2 col-lg-2">
                         <button id="git" type="button" class="btn  btn-lg"id="tooltipGit" title="Git">
                             <div id="iconGit"></div>
                         </button>
                     </div>
+                    
                     <div class="col-2 col-sm-2 col-md-2 col-lg-2">
                         <button id="github" type="button" class="btn  btn-lg"id="tooltipGithub" title="Github">
                             <div id="iconGithub"></div>
                         </button>
                     </div>
-                    <div class="col-1 col-sm-2 col-md-2 col-lg-2"></div>
+                    <div class="col-6 col-sm-6 col-md-6 col-lg-6"></div>
+                    <div class="col-0 col-sm-1 col-md-1 col-lg-1"></div>
                 </div>
             </div>
         </div>
