--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -20,37 +20,42 @@
                 <h1>Projetos</h1>
                 <div class="row">
                     <div class="col-6 col-sm-4 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
-                        <div class="card">
-                            <h4 class="card-title">Em breve</h4>
-                            <div id="div1" class="fa"></div>
+                        <div class="card" title="O site é composto por 3 seções:
+
+👤 Clientes: cadastrar, listar, pesquisar cliente especifico, deletar e atualizar (nome e telefone do cliente pesquisado);
+🐰 Pets: cadastrar, listar, pesquisar pet especifico, deletar, atualizar (nome, tipo, raça e data de nascimento do cliente pesquisado ) e associar a mais um dono;
+🩺 Consulta: agendar, listar, pesquisar historico de consultas do pet, consultas do dia, proximas consultas, historico total de consultas, deletar e atualizar (data e hora das próximas consultas).">
+                            <a href="https://github.com/Jana-SI/pet_lovers_crud">
+                                <img class="card-img" src="components/img/printhome.png">
+                            </a>
                         </div>
                     </div>
                     <div class="col-6 col-sm-4 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
-                        <div class="card">
+                        <div id="card">
                             <h4 class="card-title">Em breve</h4>
                             <div id="div2" class="fa"></div>
                         </div>
                     </div>
                     <div class="col-6 col-sm-4 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
-                        <div class="card">
+                        <div id="card">
                             <h4 class="card-title">Em breve</h4>
                             <div id="div3" class="fa"></div>
                         </div>
                     </div>
                     <div class="col-6 col-sm-4 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
-                        <div class="card">
+                        <div id="card">
                             <h4 class="card-title">Em breve</h4>
                             <div id="div4" class="fa"></div>
                         </div>
                     </div>
                     <div class="col-6 col-sm-4 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
-                        <div class="card">
+                        <div id="card">
                             <h4 class="card-title">Em breve</h4>
                             <div id="div5" class="fa"></div>
                         </div>
                     </div>
                     <div class="col-6 col-sm-4 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
-                        <div class="card">
+                        <div id="card">
                             <h4 class="card-title">Em breve</h4>
                             <div id="div6" class="fa"></div>
                         </div>
