--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -32,13 +32,16 @@
                     HTML5 <i class="iconSobre fa-brands fa-html5"></i>,
                     CSS3 <i class="iconSobre fa-brands fa-css3-alt"></i>,
                     JavaScript <i class="iconSobre fa-brands fa-square-js"></i>,
-                    Jquery <img class="iconSobre" src="components/icones/icons8-jquery-verde.png" alt="icon_jquery"> e
-                    Bootstrap <i class="iconSobre bi bi-bootstrap-fill"></i>.
+                    Jquery <img class="iconSobre" src="components/icones/icons8-jquery-verde.png" alt="icon_jquery">,
+                    Bootstrap <i class="iconSobre bi bi-bootstrap-fill"></i> e
+                    Python <img class="iconSobre" src="components/icones/icons8-python-16.png" alt="icon_jquery">.
                 </p>
 
                 <p>Outras tecnologias e frameworks que tenho contato são:
                     React <i class="iconSobre fa-brands fa-react"></i>,
                     Vue <i class="iconSobre fa-brands fa-vuejs"></i>,
+                    Flask <img class="iconSobre" src="components/icones/icons8-flask-32.png"
+                    alt="icon_flask">,
                     Postgresql <img class="iconSobre" src="components/icones/icons8-postgresql-verde.png"
                         alt="icon_postgeesql">,
                     PHP 8 <i class="iconSobre fa-brands fa-php"></i>,
