--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -48,6 +48,11 @@
                             <div id="iconBootstrap"></div>
                         </button>
                     </div>
+                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
+                        <button id="figma" type="button" class="btn  btn-lg" id="tooltipFigma" title="Figma">
+                            <div id="iconFigma"></div>
+                        </button>
+                    </div>
                     
                     <div class="col-2 col-sm-2 col-md-2 col-lg-2">
                         <button id="python" type="button" class="btn  btn-lg" id="tooltipPython" title="Python">
@@ -65,15 +70,15 @@
                             <div id="iconVue"></div>
                         </button>
                     </div>
+                    <div class="col-0 col-sm-1 col-md-1 col-lg-1"></div>
+                </div>
+                <div class="row">
+                    <div class="col-1 col-sm-2 col-md-2 col-lg-2"></div>
                     <div class="col-2 col-sm-2 col-md-2 col-lg-2">
                         <button id="flask" type="button" class="btn  btn-lg" id="tooltipFlask" title="Flask">
                             <div id="iconFlask"></div>
                         </button>
                     </div>
-                    <div class="col-0 col-sm-1 col-md-1 col-lg-1"></div>
-                </div>
-                <div class="row">
-                    <div class="col-1 col-sm-2 col-md-2 col-lg-2"></div>
                     <div class="col-2 col-sm-2 col-md-2 col-lg-2">
                         <button id="postgresql" type="button" class="btn  btn-lg" id="tooltipPostgresql" title="Postgresql">
                             <div id="iconPostgresql"></div>
@@ -90,27 +95,27 @@
                             <div id="iconJoomla"></div>
                         </button>
                     </div>
-                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                        <button id="wordpress" type="button" class="btn  btn-lg" id="tooltipWordpress" title="Wordpress">
-                            <div id="iconWordpress"></div>
-                        </button>
-                    </div>
                     <div class="col-1 col-sm-2 col-md-2 col-lg-2"></div>
                 </div>
                 <div class="row">
                     <div class="col-0 col-sm-1 col-md-1 col-lg-1"></div>
                     <div class="col-2 col-sm-2 col-md-2 col-lg-2">
+                        <button id="wordpress" type="button" class="btn  btn-lg" id="tooltipWordpress" title="Wordpress">
+                            <div id="iconWordpress"></div>
+                        </button>
+                    </div>
+                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
                         <button id="git" type="button" class="btn  btn-lg"id="tooltipGit" title="Git">
                             <div id="iconGit"></div>
                         </button>
                     </div>
-                    
                     <div class="col-2 col-sm-2 col-md-2 col-lg-2">
                         <button id="github" type="button" class="btn  btn-lg"id="tooltipGithub" title="Github">
                             <div id="iconGithub"></div>
                         </button>
                     </div>
-                    <div class="col-6 col-sm-6 col-md-6 col-lg-6"></div>
+                    <div class="col-2 col-sm-2 col-md-2 col-lg-2"></div>
+                    <div class="col-2 col-sm-2 col-md-2 col-lg-2"></div>
                     <div class="col-0 col-sm-1 col-md-1 col-lg-1"></div>
                 </div>
             </div>
