--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -40,6 +40,8 @@
                 <p>Outras tecnologias e frameworks que tenho contato são:
                     React <i class="iconSobre fa-brands fa-react"></i>,
                     Vue <i class="iconSobre fa-brands fa-vuejs"></i>,
+                    Figma <img class="iconSobre" src="components/icones/icons8-figma-16.png"
+                    alt="icon_flask">,
                     Flask <img class="iconSobre" src="components/icones/icons8-flask-32.png"
                     alt="icon_flask">,
                     Postgresql <img class="iconSobre" src="components/icones/icons8-postgresql-verde.png"
