--- a/pages/home.html
+++ b/pages/home.html
@@ -18,7 +18,7 @@
                     </h1>
 
                     <button class="btn" id="CV">
-                        <a href="components/pdf/Curriculo.pdf" download="Curriculo_Janaina_da_Silva">
+                        <a href="components/pdf/Currículo_Janaina_da_Silva.pdf" download="Curriculo_Janaina_da_Silva">
                             Download Curriculum Vitae
                         </a>
                     </button>
